@@ -1,6 +1,9 @@
 CHANGELOG
 ---------
 
+- 2020/01/01 0.9.22 release.
+    - Issue 114: Unexpected whitespace inserted in Wakati mode 
+
 - 2019/12/27 0.9.1 release.
     - Issue 112: Erroneous handling of whitespace trimming
     - Issue 113: Security vulnerability for Jinja (requirement for documentation generation) 
